[package]
name = "rustworks"
version = "0.0.1"
authors = ["willemml <willem@leit.so>"]
edition = "2018"
license = "MIT"
description = "An operating system for the Numworks n0110 calculator."
repository = "https://github.com/willemml/rustworks"
homepage = "https://github.com/willemml/rustworks"

[net]
git-fetch-with-cli = true

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
rtt-target = { version = "0.3", features = ["cortex-m"] }
embedded-hal = "0.2"
nw-board-support = { git = "https://github.com/nw-rs/board-support.git" }

[[bin]]
name = "rustworks"
path = "src/main.rs"
test = false
bench = false