[package]
name = "rustworks"
version = "0.0.1"
authors = ["willemml <willem@leit.so>"]
edition = "2018"
license = "MIT"
description = "An operating system for the Numworks n0110 calculator."
repository = "https://github.com/willemml/rustworks"
homepage = "https://github.com/willemml/rustworks"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.0.0", features = [ "thumbv7-backend" ] }
nw-board-support = { git = "https://github.com/nw-rs/board-support.git" }

[[bin]]
name = "rustworks"
path = "src/main.rs"
test = false
bench = false